Add ffmpeg compressed package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,3 +43,7 @@ configure_file(${CMAKE_SOURCE_DIR}/config.json ${CMAKE_SOURCE_DIR}/bin/config.js
 file(COPY ${CMAKE_SOURCE_DIR}/lib/zoom_video_sdk/ DESTINATION ${CMAKE_SOURCE_DIR}/bin)
 
 
+if(EXISTS "${CMAKE_SOURCE_DIR}/lib/ffmpeg.tar.gz")
+    execute_process(COMMAND mkdir -p lib/ffmpeg COMMAND tar -xf lib/ffmpeg.tar.gz -C lib/ffmpeg COMMAND rm lib/ffmpeg.tar.gz WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+endif()
+
