--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,7 @@ if(EXISTS "${CMAKE_SOURCE_DIR}/lib/ffmpeg.tar.gz")
     execute_process(COMMAND mkdir -p lib/ffmpeg COMMAND tar -xf lib/ffmpeg.tar.gz -C lib/ffmpeg COMMAND rm lib/ffmpeg.tar.gz WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
 endif()
 
+if(EXISTS "${CMAKE_SOURCE_DIR}/lib/qt_libs.tar.gz")
+    execute_process(COMMAND tar -xf lib/qt_libs.tar.gz -C lib/ COMMAND rm lib/qt_libs.tar.gz WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
+endif()
+
