--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,14 +21,14 @@ include_directories(${CMAKE_SOURCE_DIR}/include/ffmpeg)
 link_directories(${CMAKE_SOURCE_DIR}/lib/zoom_video_sdk)
 link_directories(${CMAKE_SOURCE_DIR}/lib/ffmpeg)
 
-add_executable(video_sdk_session_recorder ${CMAKE_SOURCE_DIR}/src/raw_data_ffmpeg_encoder.cpp ${CMAKE_SOURCE_DIR}/src/video_sdk_session_recorder.cpp )
+add_executable(zoom_v-sdk_linux_bot ${CMAKE_SOURCE_DIR}/src/raw_data_ffmpeg_encoder.cpp ${CMAKE_SOURCE_DIR}/src/zoom_v-sdk_linux_bot.cpp )
 
-target_link_libraries(video_sdk_session_recorder PkgConfig::deps)
-target_link_libraries(video_sdk_session_recorder videosdk)
-target_link_libraries(video_sdk_session_recorder z pthread avformat)
-target_link_libraries(video_sdk_session_recorder z lzma swresample avcodec)
-target_link_libraries(video_sdk_session_recorder avutil)
-target_link_libraries(video_sdk_session_recorder swscale avfilter)
+target_link_libraries(zoom_v-sdk_linux_bot PkgConfig::deps)
+target_link_libraries(zoom_v-sdk_linux_bot videosdk)
+target_link_libraries(zoom_v-sdk_linux_bot z pthread avformat)
+target_link_libraries(zoom_v-sdk_linux_bot z lzma swresample avcodec)
+target_link_libraries(zoom_v-sdk_linux_bot avutil)
+target_link_libraries(zoom_v-sdk_linux_bot swscale avfilter)
 
 configure_file(${CMAKE_SOURCE_DIR}/config.json ${CMAKE_SOURCE_DIR}/bin/config.json COPYONLY)
 file(COPY ${CMAKE_SOURCE_DIR}/lib/zoom_video_sdk/ DESTINATION ${CMAKE_SOURCE_DIR}/bin)
